--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
     "qrcode": "^1.5.4", 
-    "qs": "^6.14.0"
+    "qs": "^6.14.0",
+    "@vercel/analytics": "latest"
   }
 }
