--- a/src/settings.json
+++ b/src/settings.json
@@ -1,17 +1,10 @@
 {
   "name": "Falcon-Api",
-  "version": "v3.0.0",
+  "version": "v1.2",
   "description": "Simple and easy to use API.",
+  "bannerImage": "/banner.jpg",
   "header": {
     "status": "Online!",
-    "bannerImage": [
-      "/banner.jpg"
-    ],
-    "imageSize": {
-      "mobile": "80%",
-      "tablet": "40%",
-      "desktop": "40%"
-    }
   },
   "apiSettings": {
     "creator": "FlowFalcon", 
