--- a/src/settings.json
+++ b/src/settings.json
@@ -4,7 +4,7 @@
   "description": "Simple and easy to use API.",
   "bannerImage": "/banner.jpg",
   "header": {
-    "status": "Online!",
+    "status": "Online!"
   },
   "apiSettings": {
     "creator": "FlowFalcon", 
