--- a/src/settings.json
+++ b/src/settings.json
@@ -32,7 +32,17 @@
           "params": {
             "text": "Teks atau perintah untuk chat AI Deepseek"
           }
-        }        
+        },
+        {
+          "name": "HydroMind",
+          "desc": "Talk with hydromind",
+          "path": "/ai/hydromind?text=&model=",
+          "status": "update",
+          "params": {
+            "text": "Teks atau perintah untuk chat AI",
+            "model":"1See the list of supported AI models here: https://mind.hydrooo.web.id"
+          }
+        }
       ]
     },
     {
