--- a/src/settings.json
+++ b/src/settings.json
@@ -35,9 +35,9 @@
         },
         {
           "name": "HydroMind",
-          "desc": "Talk with hydromind",
+          "desc": "See the list of supported AI models here: https://mind.hydrooo.web.id",
           "path": "/ai/hydromind?text=&model=",
-          "status": "update",
+          "status": "ready",
           "params": {
             "text": "Teks atau perintah untuk chat AI",
             "model":"1See the list of supported AI models here: https://mind.hydrooo.web.id"
