--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "path": "^0.12.7",
     "qrcode": "^1.5.4", 
     "qs": "^6.14.0",
-    "@vercel/analytics": "latest",
-    "canvas":"latest"
+    "@vercel/analytics": "latest"
   }
 }
