--- a/src/settings.json
+++ b/src/settings.json
@@ -2,7 +2,7 @@
   "name": "Falcon-Api",
   "version": "v1.2",
   "description": "Simple and easy to use API.",
-  "bannerImage": "/src/banner.jpg",
+  "bannerImage": "/src/nahida.mp4",
   "header": {
     "status": "Online!"
   },
