--- a/src/settings.json
+++ b/src/settings.json
@@ -495,6 +495,17 @@
             "ppuser":"gambar profil pengguna",
             "text": "isi pesan untuk banner"
           }
+        },
+        {
+          "name": "Fake Tiktok (Beta)",
+          "desc": "Fake Profil Tiktok, parameter lengkap cek di channel",
+          "path": "/imagecreator/faketiktok?name=&username=&pp=",
+          "status": "ready",
+          "params": {
+            "name":"Nama untuk tiktok",
+            "username":"Username Tiktok",
+            "pp": "foto profil Tiktok"
+          }
         }
       ]
     }, 
