--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "path": "^0.12.7",
     "qrcode": "^1.5.4", 
     "qs": "^6.14.0",
+    "multer":"latest",
     "@vercel/analytics": "latest"
   }
 }
