--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "qrcode": "^1.5.4", 
     "qs": "^6.14.0",
     "multer":"latest",
+    "image-size":"latest",
     "@vercel/analytics": "latest"
   }
 }
