--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "qs": "^6.14.0",
     "multer":"latest",
     "image-size":"latest",
+    "@supabase/supabase-js":"2.49.4",
     "@vercel/analytics": "latest"
   }
 }
