--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "multer":"latest",
     "image-size":"latest",
     "@supabase/supabase-js":"2.49.4",
+    "naruyaizumi":"latest",
     "@vercel/analytics": "latest"
   }
 }
