--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "multer":"latest",
     "image-size":"latest",
     "@supabase/supabase-js":"2.49.4",
-    "naruyaizumi":"latest",
+    "pdfkit":"0.17.1",
     "@vercel/analytics": "latest"
   }
 }
