--- a/src/settings.json
+++ b/src/settings.json
@@ -708,7 +708,7 @@
                     "name": "Convert QRIS Image",
                     "desc": "Membuat gambar QRIS dengan nominal dan pajak dari gambar QRIS statis.",
                     "path": "/imagecreator/convertqris?qris=&amount=&tax=",
-                    "status": "ready",
+                    "status": "error",
                     "params": {
                         "qris": "URL gambar QRIS.",
                         "amount": "Nominal transaksi.",
