--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@supabase/supabase-js":"2.49.4",
     "pdfkit":"0.17.1",
     "@rynn-k/proxy-agent":"latest",
+    "https-proxy-agent":"latest",
     "@vercel/analytics": "latest"
   }
 }
