--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "name": "Falcon-Api",
+  "name": "JerryCoder-Api",
   "version": "v1.2",
   "description": "Simple and easy to use API.",
   "bannerImage": "/src/banner.jpg",
