--- a/settings.json
+++ b/settings.json
@@ -7,8 +7,8 @@
     "status": "Online!"
   },
   "apiSettings": {
-    "creator": "FlowFalcon", 
-    "apikey": ["falcon-api"]
+    "creator": "JerryCoder", 
+    "apikey": ["jerrycoder"]
   },
   "categories": [
     {
